--- a/package.json
+++ b/package.json
@@ -28,14 +28,23 @@
   },
   "homepage": "https://github.com/ouyangshan09/oys-cli#readme",
   "devDependencies": {
+    "async": "^2.1.5",
     "chalk": "^1.1.3",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
+    "consolidate": "^0.14.0",
     "download-git-repo": "^0.2.1",
+    "handlebars": "^4.0.5",
+    "inquirer": "^0.12.0",
+    "metalsmith": "^2.3.0",
+    "minimatch": "^3.0.3",
+    "ora": "^1.1.0",
     "path": "^0.12.7",
+    "read-metadata": "^1.0.0",
     "request": "^2.79.0",
     "user-home": "^2.0.0",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "validate-npm-package-name": "^3.0.0"
   },
   "engines": {
     "node": ">=4.0.0"
