--- a/package.json
+++ b/package.json
@@ -28,6 +28,13 @@
   },
   "homepage": "https://github.com/ouyangshan09/oys-cli#readme",
   "devDependencies": {
+
+  },
+  "engines": {
+    "node": ">=4.0.0"
+  },
+  "dependencies": {
+    "user-home": "^2.0.0",
     "async": "^2.1.5",
     "chalk": "^1.1.3",
     "colors": "^1.1.2",
@@ -42,11 +49,7 @@
     "path": "^0.12.7",
     "read-metadata": "^1.0.0",
     "request": "^2.79.0",
-    "user-home": "^2.0.0",
     "util": "^0.10.3",
     "validate-npm-package-name": "^3.0.0"
-  },
-  "engines": {
-    "node": ">=4.0.0"
   }
 }
